--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -1,105 +1,105 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  font-family: "Note Sans JP", Arial, Helvetica, sans-serif;
+  padding: 20px;
+  
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+/* form */
+.form{
+  border: 2px solid #000;
+  padding: 20px 10px;
+  min-width: 780px;
+  margin: 0 auto;
 }
 
-body {
-  margin: 0;
+.form_list{
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  margin-bottom: 10px;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.form_title{
+  font-weight: bold;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  width: 15%;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.form_field{
+  width: 50%;
 }
 
-
-.splide{
-  margin: 0 auto;
-  width: 60%;
+.form_button{
   text-align: center;
-  background-color: #eee;
-
 }
+
+/* input, textarea */
+.input_field{
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #000;
+}
+
+/* button */
+.button{
+  border 0;
+  font-style: 18px;
+  padding: 10px 20px;
+  font-weight: bold;
+  cursor: pointer;
+  background-color: #333;
+  color: #fff;
+  border-radius: 5px;
+  transition: opacity 0.25s;
+}
+
+.button:hover{
+  opacity: 0.8;
+}
+
+/* history_link */
+.history_link{
+  margin-top: 20px;
+  text-align: right;
+}
+
+.history_link > a{
+  margin: 0 5px;
+  color: #000;
+}
+
+
+/* table */
+
+.table{
+  width: 100%;
+}
+
+.table_head{
+  background-color: #eee;
+}
+
+.table_head th{
+  border: 1px solid #000;
+  text-align: center;
+  padding: 5px;
+  width: 15%;
+}
+
+.table_head th:nth-child(4){
+  width: 55%;
+}
+
+.table_body td{
+  text-align: left;
+  border: 1px solid #000;
+  padding: 10px;
+}
+
+
+
+
+
+
+
+
+
+
